Enable true concurrent access in FfmPlugin with per-call arenas