@@ -13,11 +13,35 @@ import java.nio.charset.StandardCharsets;
  * <p>
  * This implementation uses Project Panama to call native plugin functions directly,
  * without JNI overhead.
+ *
+ * <h2>Thread Safety</h2>
+ * This class is fully thread-safe and supports concurrent calls from multiple threads.
+ * Each call creates its own {@link Arena} for temporary memory allocations, ensuring
+ * no contention between threads. The Rust plugin implementation is also thread-safe
+ * (Send + Sync), allowing true concurrent execution.
+ *
+ * <h2>Memory Management</h2>
+ * The plugin uses two types of arenas:
+ * <ul>
+ *   <li><b>Plugin-lifetime arena</b>: Created at load time using {@link Arena#ofShared()},
+ *       holds library symbols and upcall stubs, closed when plugin is closed. Shared to
+ *       allow concurrent access to the plugin handle.</li>
+ *   <li><b>Per-call arenas</b>: Created for each {@link #call} or {@link #callRaw} using
+ *       {@link Arena#ofShared()}, holds request/response data, automatically closed when
+ *       call completes.</li>
+ * </ul>
+ * <p>
+ * Both arena types use {@link Arena#ofShared()} to support concurrent access from multiple
+ * threads. This architecture eliminates synchronization bottlenecks while maintaining FFM
+ * safety through proper arena lifecycle management.
+ *
+ * @see FfmPluginLoader
+ * @see Arena
  */
 public class FfmPlugin implements Plugin {
     private static final Gson GSON = new GsonBuilder().create();
 
-    private final Arena arena;
+    private final Arena pluginArena;
     private final MemorySegment handle;
     private final NativeBindings bindings;
     private final LogCallback logCallback;
@@ -27,13 +51,13 @@ public class FfmPlugin implements Plugin {
     /**
      * Create a new FFM plugin wrapper.
      *
-     * @param arena       the memory arena for this plugin's lifetime
+     * @param pluginArena the memory arena for this plugin's lifetime (library symbols, upcall stub)
      * @param handle      the native plugin handle
      * @param bindings    the native function bindings
      * @param logCallback optional log callback
      */
-    FfmPlugin(Arena arena, MemorySegment handle, NativeBindings bindings, LogCallback logCallback) {
-        this.arena = arena;
+    FfmPlugin(Arena pluginArena, MemorySegment handle, NativeBindings bindings, LogCallback logCallback) {
+        this.pluginArena = pluginArena;
         this.handle = handle;
         this.bindings = bindings;
         this.logCallback = logCallback;
@@ -55,34 +79,36 @@ public class FfmPlugin implements Plugin {
     }
 
     @Override
-    public synchronized String call(String typeTag, String request) throws PluginException {
+    public String call(String typeTag, String request) throws PluginException {
         checkNotClosed();
 
-        try {
+        // Create per-call arena for temporary allocations (shared for FFM compatibility)
+        try (Arena callArena = Arena.ofShared()) {
             // Allocate type tag as null-terminated string
-            MemorySegment typeTagSegment = arena.allocateUtf8String(typeTag);
+            MemorySegment typeTagSegment = callArena.allocateUtf8String(typeTag);
 
             // Allocate request data
             byte[] requestBytes = request.getBytes(StandardCharsets.UTF_8);
-            MemorySegment requestSegment = arena.allocate(requestBytes.length);
+            MemorySegment requestSegment = callArena.allocate(requestBytes.length);
             requestSegment.copyFrom(MemorySegment.ofArray(requestBytes));
 
-            // Call the plugin - use invoke() with arena as SegmentAllocator for return struct
+            // Call the plugin - use callArena as SegmentAllocator for return struct
             MemorySegment resultBuffer = (MemorySegment) bindings.pluginCall().invoke(
-                    arena,  // SegmentAllocator for return value
+                    callArena,  // SegmentAllocator for return value
                     handle,
                     typeTagSegment,
                     requestSegment,
                     (long) requestBytes.length
             );
 
-            // Parse the result buffer
+            // Parse the result buffer (copies data to Java heap, then frees native buffer)
             return parseResultBuffer(resultBuffer);
         } catch (PluginException e) {
             throw e;
         } catch (Throwable t) {
             throw new PluginException("Native call failed", t);
         }
+        // callArena automatically closed here
     }
 
     @Override
@@ -104,27 +130,29 @@ public class FfmPlugin implements Plugin {
      * @return a memory segment containing the response data
      * @throws PluginException if the call fails
      */
-    public synchronized MemorySegment callRaw(int messageId, BinaryStruct request, long responseSize)
+    public MemorySegment callRaw(int messageId, BinaryStruct request, long responseSize)
             throws PluginException {
         checkNotClosed();
 
-        try {
+        // Create per-call arena for temporary allocations (shared for FFM compatibility)
+        try (Arena callArena = Arena.ofShared()) {
             // Call the plugin with raw binary data
             MemorySegment resultBuffer = (MemorySegment) bindings.pluginCallRaw().invoke(
-                    arena,  // SegmentAllocator for return value
+                    callArena,  // SegmentAllocator for return value
                     handle,
                     messageId,
                     request.segment(),
                     request.byteSize()
             );
 
-            // Parse and validate the response
+            // Parse and validate the response (copies to plugin arena, then frees native buffer)
             return parseRawResultBuffer(resultBuffer, responseSize);
         } catch (PluginException e) {
             throw e;
         } catch (Throwable t) {
             throw new PluginException("Native raw call failed", t);
         }
+        // callArena automatically closed here
     }
 
     /**
@@ -159,8 +187,8 @@ public class FfmPlugin implements Plugin {
                         "Response size mismatch: expected %d, got %d", expectedSize, len));
             }
 
-            // Copy response data to arena-managed memory
-            MemorySegment responseData = arena.allocate(len);
+            // Copy response data to plugin arena (persists until plugin close)
+            MemorySegment responseData = pluginArena.allocate(len);
             MemorySegment sourceSlice = data.reinterpret(len);
             responseData.copyFrom(sourceSlice);
 
@@ -208,8 +236,8 @@ public class FfmPlugin implements Plugin {
             System.err.println("Warning: Exception during plugin shutdown: " + t.getMessage());
         }
 
-        // Close the arena (releases all allocated memory)
-        arena.close();
+        // Close the plugin-lifetime arena (releases all allocated memory)
+        pluginArena.close();
     }
 
     /**
